--- a/About/about.html
+++ b/About/about.html
@@ -552,7 +552,7 @@
                                                     alt="">
                                             </div>
                                             <div class="client-review">
-                                                <img src="./image/asset 36.svg" alt="">
+                                                <img src="./Image/asset 36.svg" alt="">
                                             </div>
                                         </div>
                                         <div class="client-review-details">
@@ -579,10 +579,10 @@
                                     <div class="clinet-suggestion">
                                         <div class="client-details">
                                             <div class="clinet-image">
-                                                <img src="./image/asset 38.png" alt="">
+                                                <img src="./Image/asset 38.png" alt="">
                                             </div>
                                             <div class="client-review">
-                                                <img src="./image/asset 36.svg" alt="">
+                                                <img src="./Image/asset 36.svg" alt="">
                                             </div>
                                         </div>
                                         <div class="client-review-details">
@@ -608,10 +608,10 @@
                                     <div class="clinet-suggestion">
                                         <div class="client-details">
                                             <div class="clinet-image">
-                                                <img src="./image/asset 35.png" alt="">
+                                                <img src="./Image/asset 35.png" alt="">
                                             </div>
                                             <div class="client-review">
-                                                <img src="./image/asset 36.svg" alt="">
+                                                <img src="./Image/asset 36.svg" alt="">
                                             </div>
                                         </div>
                                         <div class="client-review-details">
