--- a/Our team/team.html
+++ b/Our team/team.html
@@ -262,8 +262,8 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details" data-aos="fade-up">
                             <div class="member-image">
-                                <img src="https://media.licdn.com/dms/image/C5603AQGY_oCxGQrp7g/profile-displayphoto-shrink_400_400/0/1592772435969?e=1706140800&v=beta&t=aGsqcotkz9qCyZT-IxhaaCehv6k1NXpzXG736IC9QmM"
-                                    class="w-100" alt="">
+                                <img src="./image/kano.png"
+                                    class="w-100"  alt="">
                             </div>
                             <div class="member-work-details">
                                 <h3>Purushotam Chhuchhiya</h3>
@@ -274,7 +274,7 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details" data-aos="fade-up">
                             <div class="member-image">
-                                <img src="https://media.licdn.com/dms/image/D4D35AQFXaiP1jNEmlw/profile-framedphoto-shrink_400_400/0/1690803058472?e=1702101600&v=beta&t=Pem0rZxyiM545pjKGlb06VJT1aVixCW0n6a3UOGadtM"
+                                <img src="./image/khushbudi.jpg"
                                     class="w-100" alt="">
                             </div>
                             <div class="member-work-details">
@@ -320,10 +320,10 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details"  data-aos="fade-up">
                             <div class="member-image">
-                                <img src="./image/deep.jpg" class="w-100" alt="">
+                                <img src="./image/missu.jpg" class="w-100" alt="">
                             </div>
                             <div class="member-work-details">
-                                <h3>Deep Pansuriya</h3>
+                                <h3>Mishri Bagsaria</h3>
                                 <h4>CEO, Founder</h4>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details"  data-aos="fade-up">
                             <div class="member-image">
-                                <img src="./image/Divya.jpg" class="w-100" alt="">
+                                <img src="./image/Divya2.jpg" class="w-100" alt="">
                             </div>
                             <div class="member-work-details">
                                 <h3>Divya Varsani</h3>
@@ -353,7 +353,7 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details"  data-aos="fade-up">
                             <div class="member-image">
-                                <img src="./image/pooja.jpg" class="w-100" alt="">
+                                <img src="./image/pooja2.jpg" class="w-100" alt="">
                             </div>
                             <div class="member-work-details">
                                 <h3>Pooja Varsani</h3>
@@ -364,10 +364,10 @@
                     <div class="col-12 col-sm-12 col-md-6 col-xl-3">
                         <div class="member-details"  data-aos="fade-up">
                             <div class="member-image">
-                                <img src="./image/Mishri.jpg" class="w-100" alt="">
+                                <img src="./image/deep.jpg" class="w-100" alt="">
                             </div>
                             <div class="member-work-details">
-                                <h3>Mishri Bagsaria</h3>
+                                <h3>Deep Pansuriya</h3>
                                 <h4>CEO, Founder</h4>
                             </div>
                         </div>
