--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <nav class="navbar">
                         <div class="container-fluid ">
                             <i class="fa-solid fa-bars" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTop"
-                                aria-controls="offcanvasTop"></i>
+                            aria-controls="offcanvasTop"></i>
                             <div class="offcanvas offcanvas-top" style="height: 101vh;" tabindex="-1" id="offcanvasTop"
                                 aria-labelledby="offcanvasTopLabel">
                                 <div class="offcanvas-body">
@@ -220,11 +220,10 @@
                                     </h1>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-12 col-lg-1 social-media">
-                                    <!-- <i class="fa-solid fa-circle-half-stroke"></i> -->
-                                    <i class="fa-solid fa-moon" onclick="mode_change()"></i>
-                                    <h3>.</h3>
-                                    <!-- <i class="fa-brands fa-facebook-f"></i>
+                                    <!-- <i class="fa-solid fa-moon" onclick="mode_change()"></i>
                                     <h3>.</h3> -->
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                    <h3>.</h3>
                                     <i class="fa-brands fa-instagram"></i>
                                     <h3>.</h3>
                                     <i class="fa-brands fa-linkedin-in"></i>
@@ -443,7 +442,7 @@
                                             <g mask="url(#mask0_1599_148)">
                                                 <path
                                                     d="M21 10.5L18.1068 8.45834L19.5999 5.25001L16.0651 4.93491L15.75 1.40008L12.5417 2.89324L10.5 0L8.45833 2.89324L5.25001 1.40008L4.93491 4.93491L1.40008 5.25001L2.89324 8.45834L0 10.5L2.89324 12.5417L1.40008 15.75L4.93491 16.0651L5.25001 19.5999L8.45833 18.1068L10.5 21L12.5417 18.1068L15.75 19.5999L16.0651 16.0651L19.5999 15.75L18.1068 12.5417L21 10.5Z"
-                                                    fill="#121212" / style="fill: #027EBC;">
+                                                    fill="#121212" style="fill: #027EBC;" />
                                             </g>
                                         </g>
                                         <defs>
@@ -1309,6 +1308,7 @@
                 </div>
             </div>
         </div>
+        <!-- Contact -->
         <div style="background-color: #121212; color: white;" class="side">
             <div class="container p-lg-5 p-3  pb-3">
                 <div class="row ">
@@ -1499,39 +1499,38 @@
                         </div>
                     </div>
                 </div>
-            <br>
-            <hr>
-            <div class="footer-end">
-                <div class="copyright">
-                    © COPYRIGHT 2019 - 2023 , VIHA INFOTECH LLP, ALL RIGHTS RESERVED.
-                </div>
-                <div class="footer-social-media-icon">
-                    <ul>
-                        <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-facebook-f"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-instagram"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-linkedin-in"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fa-brands fa-twitter"></i>
-                            </a>
-                        </li>
-                    </ul>
+                <br>
+                <hr>
+                <div class="footer-end">
+                    <div class="copyright">
+                        © COPYRIGHT 2019 - 2023 , VIHA INFOTECH LLP, ALL RIGHTS RESERVED.
+                    </div>
+                    <div class="footer-social-media-icon">
+                        <ul>
+                            <li>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            
-        </div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
