Done Change Photo

--- a/About/about.html
+++ b/About/about.html
@@ -520,7 +520,7 @@
                                     <div class="clinet-suggestion">
                                         <div class="client-details">
                                             <div class="clinet-image">
-                                                <img src="https://media.licdn.com/dms/image/C5603AQGY_oCxGQrp7g/profile-displayphoto-shrink_400_400/0/1592772435969?e=1706140800&v=beta&t=aGsqcotkz9qCyZT-IxhaaCehv6k1NXpzXG736IC9QmM"
+                                                <img src="../Home/Image/jack_doe.webp"
                                                     alt="">
                                             </div>
                                             <div class="client-review">
@@ -536,37 +536,6 @@
                                         <div class="author-details">
                                             <div class="author-contect">
                                                 <h4>Purushotam Chhuchhiya</h4>
-                                                <span>CEO | Sulok Digital Pvp Limited</span>
-                                            </div>
-                                            <div class="clinet-quto-icon">
-                                                <img src="./Image/asset 37.svg" alt="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="clinet-suggestion">
-                                        <div class="client-details">
-                                            <div class="clinet-image">
-                                                <img src="https://media.licdn.com/dms/image/D4D35AQFXaiP1jNEmlw/profile-framedphoto-shrink_400_400/0/1690803058472?e=1702101600&v=beta&t=Pem0rZxyiM545pjKGlb06VJT1aVixCW0n6a3UOGadtM"
-                                                    alt="">
-                                            </div>
-                                            <div class="client-review">
-                                                <img src="./Image/asset 36.svg" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="client-review-details">
-                                            <p>"We started our product development with Vihaa's team. In starting ,
-                                                We are also worried about team performance and productivity . As
-                                                time passes , We feel like we got our partner . They always ready to
-                                                accept challenges and try their best to achieve goals. I am really
-                                                satisfied with Vihaa's team work, dedications towards work, Culture
-                                                and Co-operative environment."
-                                            </p>
-                                        </div>
-                                        <div class="author-details">
-                                            <div class="author-contect">
-                                                <h4>Khushbu Thummar</h4>
                                                 <span>CEO | Sulok Digital Pvp Limited</span>
                                             </div>
                                             <div class="clinet-quto-icon">
