--- a/index.html
+++ b/index.html
@@ -1038,35 +1038,7 @@
                                     <div class="clinet-suggestion">
                                         <div class="client-details">
                                             <div class="clinet-image">
-                                                <img src="https://media.licdn.com/dms/image/C5603AQGY_oCxGQrp7g/profile-displayphoto-shrink_400_400/0/1592772435969?e=1706140800&v=beta&t=aGsqcotkz9qCyZT-IxhaaCehv6k1NXpzXG736IC9QmM"
-                                                    alt="">
-                                            </div>
-                                            <div class="client-review">
-                                                <img src="./Home/Image/asset 12.svg" alt="">
-                                            </div>
-                                        </div>
-                                        <div class="client-review-details">
-                                            <p>"I wanted to thank Viha team for the fantastic job they did on my
-                                                web app development project. I'm really proud to say that I've been
-                                                working with you guys and can't wait to get connected for the new
-                                                project in the future!"</p>
-                                        </div>
-                                        <div class="author-details">
-                                            <div class="author-contect">
-                                                <h4>Purushotam Chhuchhiya</h4>
-                                                <span>CEO | Sulok Digital Pvp Limited</span>
-                                            </div>
-                                            <div class="clinet-quto-icon">
-                                                <img src="./Home/Image/asset 45.svg" alt="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="clinet-suggestion">
-                                        <div class="client-details">
-                                            <div class="clinet-image">
-                                                <img src="https://media.licdn.com/dms/image/D4D35AQFXaiP1jNEmlw/profile-framedphoto-shrink_400_400/0/1690803058472?e=1702101600&v=beta&t=Pem0rZxyiM545pjKGlb06VJT1aVixCW0n6a3UOGadtM"
+                                                <img src="./Home/Image/jack_doe.webp"
                                                     alt="">
                                             </div>
                                             <div class="client-review">
@@ -1084,7 +1056,7 @@
                                         </div>
                                         <div class="author-details">
                                             <div class="author-contect">
-                                                <h4>Khushbu Thummar</h4>
+                                                <h4>Purushotam Chhuchhiya</h4>
                                                 <span>CEO | Sulok Digital Pvp Limited</span>
                                             </div>
                                             <div class="clinet-quto-icon">
